# GuidedUltraSoundCalibration

./: CMakeLists.txt  README.md
GuidedUSCal/: GuidedUSCal.py
GuidedUSCalAlgo/: qSlicerGuidedUSCalAlgoModule.cxx  qSlicerGuidedUSCalAlgoModule.h  qSlicerGuidedUSCalAlgoModuleWidget.cxx
GuidedUSCalAlgo/Logic/: vtkLandmarkRegistration.h  vtkPointToLineRegistration.cpp  vtkPointToLineRegistration.h  vtkSlicerGuidedUSCalAlgoLogic.cxx  vtkSlicerGuidedUSCalAlgoLogic.h
GuidedUSCalAlgo/Resources/UI/: qSlicerGuidedUSCalAlgoModuleWidget.ui
GuidedUsCalAlgo/: CMakeLists.txt  qSlicerGuidedUsCalAlgoModule.cxx  qSlicerGuidedUsCalAlgoModule.h  qSlicerGuidedUsCalAlgoModuleWidget.cxx  qSlicerGuidedUsCalAlgoModuleWidget.h
GuidedUsCalAlgo/Logic/: CMakeLists.txt  PointToLineRegistration.cpp  PointToLineRegistration.h  vtkLandmarkRegistration.cpp  vtkLandmarkRegistration.h  vtkPointToLineRegistration.cpp  vtkPointToLineRegistration.h  vtkSlicerGuidedUSCalAlgoLogic.cxx  vtkSlicerGuidedUsCalAlgoLogic.cxx  vtkSlicerGuidedUsCalAlgoLogic.h
GuidedUsCalAlgo/Resources/: qSlicerGuidedUsCalAlgoModule.qrc
GuidedUsCalAlgo/Resources/UI/: qSlicerGuidedUSCalAlgoModuleWidget.ui  qSlicerGuidedUsCalAlgoFooBarWidget.ui  qSlicerGuidedUsCalAlgoModuleWidget.ui
